# lrgpr

pkg/lrgpr/: DESCRIPTION  NAMESPACE  NEWS  VERSIONS  config.status  configure  configure.in
pkg/lrgpr/R/: genericFunctions.R  lrgpr.R  plink.R  plots.R
pkg/lrgpr/data/: K.txt  test.tfam
pkg/lrgpr/inst/doc/: lrgpr.Rnw
pkg/lrgpr/inst/extdata/: test.map  test.tped
pkg/lrgpr/man/: AIC.lrgpr.Rd  BIC.lrgpr.Rd  QQ_plot.Rd  coefficients.lrgpr.Rd  convertToBinary.Rd  cooks.distance.lrgpr.Rd  criterion.lrgpr.Rd  cv.lrgpr.Rd  df.residual.lrgpr.Rd  error.bar.Rd  getAlleleFreq.Rd  getAlleleVariance.Rd  getMissingCount.Rd  glmApply.Rd  influence.lrgpr.Rd  leverage.lrgpr.Rd  lm.influence.lrgpr.Rd  logLik.lrgpr.Rd  loss.lrgpr.Rd  lrgpr.Rd  lrgprApply.Rd  plot.criterion.lrgpr.Rd  plot.cv.lrgpr.Rd  plot.lrgpr.Rd  predict.lrgpr.Rd  print.lrgpr.Rd  print.summary.lrgpr.Rd  read.fam.Rd  read.tfam.Rd  residuals.lrgpr.Rd  rstandard.lrgpr.Rd  set_missing_to_mean.Rd  summary.lrgpr.Rd  vcov.lrgpr.Rd  wald.Rd
pkg/lrgpr/src/: ARD.cpp  ARD.h  GLM.cpp  GLM.h  Makevars  Makevars.in  R_interface.h  fastGPR.cpp  fastGPR.h  fastGPR_for_R.cpp  featureBatcher.cpp  featureBatcher.h  gsl_additions.cpp  gsl_additions.h  gsl_additions_restrict.cpp  gsl_additions_restrict.h  gsl_lapack.cpp  gsl_lapack.h  informationCriteria.h  lrgpr.cpp  lrgpr.h  lrgpr_R.cpp  lrgpr_R2.h  lrgpr_params.cpp  lrgpr_params.h  misc_functions.cpp  misc_functions.h  pGLM.cpp  pGLM.h  plink.cpp  quantGen.cpp  quantGen.h
pkg/lrgpr/vignettes/doc/: INSTALL-knitr.Rnw  INSTALL.Rnw  biom.bst  compile.sh  library.bib  lrgpr-knitr.Rnw  (+4 more)
(+42 files in other folders)
